--- a/css/common.css
+++ b/css/common.css
@@ -4,12 +4,14 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
-  color: #212121;
+  /* background-color: #fafafa; */
+  /* color: #212121; */
+  background-color: #212121;
+  color: #a29f9f;
   line-height: 1.5;
 }
 
@@ -22,3 +24,9 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+/* .gallery {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+} */
